@@ -16,17 +16,17 @@ public class Main {
         arr.addFirst(-1);
         System.out.println(arr);
 
-        // arr.remove(0);
-        // System.out.println(arr);
-        //
-        // arr.removeElement(4);
-        // System.out.println(arr);
-        //
-        // arr.removeLast();
-        // System.out.println(arr);
-        //
-        // arr.removeFirst();
-        // System.out.println(arr);
+        arr.remove(0);
+        System.out.println(arr);
+
+        arr.removeElement(4);
+        System.out.println(arr);
+
+        arr.removeLast();
+        System.out.println(arr);
+
+        arr.removeFirst();
+        System.out.println(arr);
 
 
 
